Significant improvements to PlexWindow; Plex Styles for ContextMenu, MenuItem, and ListViewItem; minor additions to WinApi class

--- a/Start9/Windows/SettingsWindow.xaml
+++ b/Start9/Windows/SettingsWindow.xaml
@@ -7,8 +7,8 @@
                 xmlns:plex="clr-namespace:Start9.Api.Plex;assembly=Start9.Api"
                 mc:Ignorable="d"
                 Title="Start9 Settings" Height="512" Width="768"
-                ResizeMode="CanResizeWithGrip" Visibility="Visible"
-                Style="{DynamicResource PlexWindowStyle}">
+                ResizeMode="CanResize" Visibility="Visible"
+                Style="{DynamicResource PlexWindowStyle}" TitleBarHeight="48">
     <plex:PlexWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
