--- a/Start9/Windows/SettingsWindow.xaml
+++ b/Start9/Windows/SettingsWindow.xaml
@@ -1,16 +1,16 @@
 ﻿<plex:PlexWindow x:Class="Start9.Windows.SettingsWindow"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:sys="clr-namespace:System;assembly=mscorlib"
-                xmlns:local="clr-namespace:Start9"
-                xmlns:apictrl="clr-namespace:Start9.Api.Controls;assembly=Start9.Api"
-                xmlns:plex="clr-namespace:Start9.Api.Plex;assembly=Start9.Api"
-                mc:Ignorable="d"
-                Title="Start9 Settings" Height="510" Width="740" ShowToolBar="True"
-                ResizeMode="CanResize" Visibility="Visible"
-                TitleBarHeight="48">
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                 xmlns:local="clr-namespace:Start9"
+                 xmlns:apictrl="clr-namespace:Start9.Api.Controls;assembly=Start9.Api"
+                 xmlns:plex="clr-namespace:Start9.Api.Plex;assembly=Start9.Api"
+                 mc:Ignorable="d"
+                 Title="Start9 Settings" Height="510" Width="740" ShowToolBar="True"
+                 ResizeMode="CanResize" Visibility="Visible"
+                 TitleBarHeight="48">
     <plex:PlexWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,7 +18,7 @@
             </ResourceDictionary.MergedDictionaries>
             <!--ResourceDictionary Source="pack://application:,,,/Start9.Api;component/Themes/Colors/PlexGreen.xaml" /-->
 
-            <BitmapImage x:Key="TestBitmapImage" UriSource="C:\Windows\Web\Wallpaper\img0.jpg"/>
+            <BitmapImage x:Key="TestBitmapImage" UriSource="C:\Windows\Web\Wallpaper\img0.jpg" />
 
         </ResourceDictionary>
     </plex:PlexWindow.Resources>
@@ -34,7 +34,10 @@
                     </LinearGradientBrush>
                 </Ellipse.Fill>
             </Ellipse>
-            <Button x:Name="BackButton" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="3" Padding="-1,0,1,0" Style="{DynamicResource RoundButtonStyle}" Content="{DynamicResource SmallBackArrowPathIcon}" Click="BackButton_Click" IsEnabled="{Binding CanGoBack, Source={x:Reference SettingsFrame}}"/>
+            <Button x:Name="BackButton" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="3"
+                    Padding="-1,0,1,0" Style="{DynamicResource RoundButtonStyle}"
+                    Content="{DynamicResource SmallBackArrowPathIcon}" Click="BackButton_Click"
+                    IsEnabled="{Binding CanGoBack, Source={x:Reference SettingsFrame}}" />
         </Grid>
     </plex:PlexWindow.TitleBarContent>
     <plex:PlexWindow.ToolBarContent>
@@ -43,12 +46,18 @@
     </plex:PlexWindow.ToolBarContent>
     <plex:PlexWindow.Content>
         <Grid Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Rectangle x:Name="SizingAid" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="1" IsHitTestVisible="False"/>
-            <Frame x:Name="SettingsFrame" Margin="2" Padding="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Visible" Navigated="SettingsFrame_Navigated" NavigationUIVisibility="Hidden">
+            <Rectangle x:Name="SizingAid" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                       Opacity="1" IsHitTestVisible="False" />
+            <Frame x:Name="SettingsFrame" Margin="2" Padding="0" HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch" Visibility="Visible" Navigated="SettingsFrame_Navigated"
+                   NavigationUIVisibility="Hidden">
                 <Frame.OpacityMask>
                     <VisualBrush AlignmentX="Center" AlignmentY="Center">
                         <VisualBrush.Visual>
-                            <Border Background="Black" BorderBrush="Transparent" BorderThickness="0" CornerRadius="0,0,12,12" Width="{Binding ActualWidth, Source={x:Reference SizingAid}, FallbackValue=25}" Height="{Binding ActualHeight, Source={x:Reference SizingAid}, FallbackValue=25}"/>
+                            <Border Background="Black" BorderBrush="Transparent" BorderThickness="0"
+                                    CornerRadius="0,0,12,12"
+                                    Width="{Binding ActualWidth, Source={x:Reference SizingAid}, FallbackValue=25}"
+                                    Height="{Binding ActualHeight, Source={x:Reference SizingAid}, FallbackValue=25}" />
                         </VisualBrush.Visual>
                     </VisualBrush>
                 </Frame.OpacityMask>
@@ -195,7 +204,8 @@
     </plex:PlexWindow.Content>
     <plex:PlexWindow.FooterContent>
         <Grid x:Name="FooterRoot">
-            <Button HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="200" Height="24" Content="Footer Content Test" />
+            <Button HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="200" Height="24"
+                    Content="Footer Content Test" />
         </Grid>
     </plex:PlexWindow.FooterContent>
 </plex:PlexWindow>
