Did a front-end thing, Start9 Settings is starting to look like Start9 Settings now

--- a/Start9/Pages/Home.xaml
+++ b/Start9/Pages/Home.xaml
@@ -93,6 +93,10 @@
                     </apictrl:CommandLinkButton.Icon>
                     View and test various Front-end experiments for potential Modules (TEMPORARY)
                 </apictrl:CommandLinkButton>
+                <!--apictrl:CommandLinkButton x:Name="MarketTestCommandLinkButton" Height="192"
+                                           Style="{DynamicResource IceIconCommandLinkButtonStyle}"
+                                           HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                           Header="Market Front-End Test" Click="MarketTestCommandLinkButton_Click"/-->
             </StackPanel>
         </ScrollViewer>
     </Page.Content>
