--- a/Start9/Windows/SettingsWindow.xaml
+++ b/Start9/Windows/SettingsWindow.xaml
@@ -41,29 +41,94 @@
         </Grid>
     </plex:PlexWindow.TitleBarContent>
     <plex:PlexWindow.ToolBarContent>
-        <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="22" Margin="18,0"
-                 Style="{DynamicResource AddressBox}" />
+        <!--TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="22" Margin="18,0"
+                 Style="{DynamicResource AddressBox}" /-->
+        <Grid x:Name="ToolbarGrid" Margin="0,1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <ToggleButton x:Name="ModulesHeader" Style="{DynamicResource PlexGlowToggleButtonStyle}" Click="ToolbarHeader_Click" IsChecked="True">Modules</ToggleButton>
+            <ToggleButton x:Name="MarketHeader" Style="{DynamicResource PlexGlowToggleButtonStyle}" Grid.Column="1" Click="ToolbarHeader_Click" IsChecked="False">Market (Mart9? Store9?)</ToggleButton>
+            <ToggleButton x:Name="SettingsHeader" Style="{DynamicResource PlexGlowToggleButtonStyle}" Grid.Column="2" Click="ToolbarHeader_Click" IsChecked="False">Settings</ToggleButton>
+        </Grid>
     </plex:PlexWindow.ToolBarContent>
     <plex:PlexWindow.Content>
-        <Grid Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Rectangle x:Name="SizingAid" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                       Opacity="1" IsHitTestVisible="False" />
-            <Frame x:Name="SettingsFrame" Margin="2" Padding="0" HorizontalAlignment="Stretch"
-                   VerticalAlignment="Stretch" Visibility="Visible" Navigated="SettingsFrame_Navigated"
+        <Grid x:Name="RootGrid">
+            <Grid x:Name="InstalledModulesGrid">
+                <Grid.RenderTransform>
+                    <TranslateTransform/>
+                </Grid.RenderTransform>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Offset="0" Color="#FF588FD0"/>
+                            <GradientStop Offset="1" Color="#00588FD0"/>
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </Grid.Background>
+                <ListView DockPanel.Dock="Left" BorderBrush="Transparent" BorderThickness="0">
+                    <ListView.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                            <LinearGradientBrush.GradientStops>
+                                <GradientStop Offset="0" Color="#FFD8DDF0"/>
+                                <GradientStop Offset="1" Color="#00D8DDF0"/>
+                            </LinearGradientBrush.GradientStops>
+                        </LinearGradientBrush>
+                    </ListView.Background>
+                    <ListView.Effect>
+                        <DropShadowEffect x:Name="DropShadow" Color="Black" Direction="230" ShadowDepth="3" BlurRadius="10" Opacity="0.5" />
+                    </ListView.Effect>
+                </ListView>
+                <Grid Grid.Column="1" Grid.ColumnSpan="2"/>
+            </Grid>
+            <Grid x:Name="MarketGrid" Visibility="Hidden">
+                <Grid.RenderTransform>
+                    <TranslateTransform/>
+                </Grid.RenderTransform>
+                <Frame x:Name="MarketFrame" Margin="2" Padding="0" HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch" Visibility="Visible" Navigated="MarketFrame_Navigated"
                    NavigationUIVisibility="Hidden">
-                <Frame.OpacityMask>
-                    <VisualBrush AlignmentX="Center" AlignmentY="Center">
-                        <VisualBrush.Visual>
-                            <Border Background="Black" BorderBrush="Transparent" BorderThickness="0"
+                    <Frame.OpacityMask>
+                        <VisualBrush AlignmentX="Center" AlignmentY="Center">
+                            <VisualBrush.Visual>
+                                <Border Background="Black" BorderBrush="Transparent" BorderThickness="0"
                                     CornerRadius="0,0,12,12"
                                     Width="{Binding ActualWidth, Source={x:Reference SizingAid}, FallbackValue=25}"
                                     Height="{Binding ActualHeight, Source={x:Reference SizingAid}, FallbackValue=25}" />
-                        </VisualBrush.Visual>
-                    </VisualBrush>
-                </Frame.OpacityMask>
-            </Frame>
-        </Grid>
-        <!--Grid x:Name="Root" Margin="0,2,0,0">
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Frame.OpacityMask>
+                </Frame>
+            </Grid>
+            <Grid x:Name="SettingsGrid" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Hidden">
+                <Grid.RenderTransform>
+                    <TranslateTransform/>
+                </Grid.RenderTransform>
+                <Rectangle x:Name="SizingAid" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                       Opacity="1" IsHitTestVisible="False" />
+                <Frame x:Name="SettingsFrame" Margin="2" Padding="0" HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch" Visibility="Visible" Navigated="SettingsFrame_Navigated"
+                   NavigationUIVisibility="Hidden">
+                    <Frame.OpacityMask>
+                        <VisualBrush AlignmentX="Center" AlignmentY="Center">
+                            <VisualBrush.Visual>
+                                <Border Background="Black" BorderBrush="Transparent" BorderThickness="0"
+                                    CornerRadius="0,0,12,12"
+                                    Width="{Binding ActualWidth, Source={x:Reference SizingAid}, FallbackValue=25}"
+                                    Height="{Binding ActualHeight, Source={x:Reference SizingAid}, FallbackValue=25}" />
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Frame.OpacityMask>
+                </Frame>
+            </Grid>
+            <!--Grid x:Name="Root" Margin="0,2,0,0">
             <Grid x:Name="HomePage" Visibility="Visible">
                 <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical">
@@ -201,6 +266,7 @@
                 </Grid>
             </Grid>
         </Grid-->
+        </Grid>
     </plex:PlexWindow.Content>
     <plex:PlexWindow.FooterContent>
         <Grid x:Name="FooterRoot">
