--- a/Start9/Pages/ModuleTestsPage.xaml
+++ b/Start9/Pages/ModuleTestsPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Start9.Pages"
+      xmlns:maf="clr-namespace:System.AddIn.Hosting;assembly=System.AddIn"
       mc:Ignorable="d"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="ModuleTestsPage">
@@ -15,9 +16,14 @@
         </ResourceDictionary>
     </Page.Resources>
     <StackPanel>
-        <Label>Choose an add-in:</Label>
-        <ListView Margin="5" Name="Addins" />
-        <Button Click="Button_Click">Get books</Button>
-        <ListView Margin="5" Name="Books" />
+        <Label>Choose a module:</Label>
+        <ListView Margin="5" Name="Modules">
+            <ListView.ItemTemplate>
+                <DataTemplate DataType="{x:Type maf:AddInToken}">
+                    <TextBlock Text="{Binding Path=Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Button Click="Button_Click">Launch Module</Button>
     </StackPanel>
 </Page>
