--- a/Start9/Pages/ModuleTestsPage.xaml
+++ b/Start9/Pages/ModuleTestsPage.xaml
@@ -4,8 +4,11 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Start9.Pages"
+      xmlns:start9="clr-namespace:Start9"
+      xmlns:views="Start9.Host.Views;assembly=Start9.Host.Views"
       xmlns:maf="clr-namespace:System.AddIn.Hosting;assembly=System.AddIn"
       mc:Ignorable="d"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="ModuleTestsPage">
     <Page.Resources>
@@ -13,22 +16,54 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Start9.Api;component/Themes/Plex.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <local:InstanceToProcessIdConverter x:Key="InstanceToProcessIdConverter"/>
         </ResourceDictionary>
+
     </Page.Resources>
     <StackPanel>
         <Label>Choose a module:</Label>
-        <ListView Margin="5" Name="Modules">
+        <ListView Margin="5" Name="Modules" ItemsSource="{x:Static start9:Module.Modules}">
             <ListView.ItemTemplate>
-                <DataTemplate DataType="{x:Type maf:AddInToken}">
-                    <TextBlock Text="{Binding Path=Name}" />
+                <DataTemplate DataType="{x:Type start9:Module}">
+                    <StackPanel>
+                        <TextBlock Text="{Binding Path=Name, Mode=OneTime}" FontWeight="Bold" FontSize="20"/>
+                        <TextBlock Text="{Binding Path=Description, Mode=OneTime}"/>
+                        <TextBlock FontSize="8">
+                            <Run Text="Version: "/>
+                            <Run Text="{Binding Path=Version, Mode=OneTime}"/>
+                        </TextBlock>
+                        <TextBlock FontSize="8">
+                            <Run Text="Publisher: "/>
+                            <Run Text="{Binding Path=Publisher, Mode=OneTime}"/>
+                        </TextBlock>
+                    </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Click="Button_Click">Launch Module</Button>
+        <Button Height="40" Click="Button_Click">Launch New Instance</Button>
         <Separator Margin="0,10,0,10"/>
+        <Label>Instances:</Label>
+        <ListView Margin="5" Name="Instances" ItemsSource="{Binding ElementName=Modules, Path=SelectedItem.Instances}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock>
+                        <Run Text="Process ID" />
+                        <Run Text="{Binding Converter={StaticResource InstanceToProcessIdConverter}}" />
+                    </TextBlock>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
-        <Label>Message Content</Label>
-        <TextBox x:Name="MessageText" Margin="5"/>
-        <Button Click="Button_Click_1">Send Message</Button>
+        <!--<Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Button> Kill this plant!</Button>
+            <Button Grid.Column="1">Get qualification data</Button>
+        </Grid>
+        
+        To be implemented later...-->
     </StackPanel>
 </Page>
